--- a/popup.html
+++ b/popup.html
@@ -88,16 +88,20 @@
     <h1>Bulk add price</h1>
     <form>
       <div>
-        <label for="fees">Fees:</label>
+        <label for="fees">Fees, %:</label>
         <input type="number" name="fees" id="fees" min="0" value="15" />
       </div>
       <div>
-        <label for="fee-ammount">Fee ammount:</label>
+        <label for="fee-ammount">Fee ammount, $:</label>
         <input type="number" name="fee-ammount" id="fee-ammount" min="0" value="0.3" step="0.1" />
       </div>
       <div>
-        <label for="profit">Profit:</label>
-        <input type="number" name="profit" id="profit" value="10" />
+        <label for="profit">Profit, %:</label>
+        <input type="number" name="percentage-profit" id="percentage-profit" value="10" />
+      </div>
+      <div>
+        <label for="profit">Profit, $:</label>
+        <input type="number" name="dollar-profit" id="dollar-profit" />
       </div>
       <div class="buttons">
         <button type="submit" data-type="submit">Submit</button>
